# realsense-obs-plugin

./: CMakeLists.txt  README.md  obs_frame_processor.cpp  obs_frame_processor.h  realsense-d400-plugin.cpp  realsense-d400-source.cpp  realsense-device.h
cmake/: FindRealSense2.cmake
